add hover effects

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,700;0,800;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="css/hover-min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Stay health</title>
 </head>
@@ -322,14 +323,20 @@
                 <span class="logo footer__logo">StayHealthy</span>
                 <p class="footer__description">Online Training, and Consultation About Diet and Exercise tailored based on user needs.</p>
                 <div class="footer-icons">
-                    <div class="footer-icons__item">
-                        <img src="img/YT.svg" alt="">
+                    <div class="footer-icons__item hvr-bounce-in">
+                        <a href="https://www.youtube.com/">
+                            <img src="img/YT.svg" alt="">
+                        </a>
                     </div>
-                    <div class="footer-icons__item">
-                        <img src="img/FB.svg" alt="">
+                    <div class="footer-icons__item hvr-bounce-in">
+                        <a href="https://www.facebook.com/">
+                            <img src="img/FB.svg" alt="">
+                        </a>
                     </div>
-                    <div class="footer-icons__item">
-                        <img src="img/IG.svg" alt="">
+                    <div class="footer-icons__item hvr-bounce-in">
+                        <a href="https://www.instagram.com/">
+                            <img src="img/IG.svg" alt="">
+                        </a>
                     </div>
                 </div>
                </div>
@@ -339,9 +346,15 @@
                             Product
                         </h3>
                         <ul class="links__ul">
-                            <li class="links__ul--item">Gym Equipment</li>
-                            <li class="links__ul--item">Suplement</li>
-                            <li class="links__ul--item">Blog</li>
+                            <a href="#">
+                                <li class="links__ul--item hvr-grow">Gym Equipment</li>
+                            </a>
+                            <a href="#">
+                                <li class="links__ul--item hvr-grow">Suplement</li>
+                            </a>
+                            <a href="#">
+                                <li class="links__ul--item hvr-grow">Blog</li>
+                            </a>
                         </ul>
                     </div>
                     <div class="footer-links__item links__item">
@@ -349,9 +362,15 @@
                             Explore Us
                         </h3>
                         <ul class="links__ul">
-                            <li class="links__ul--item">FAQ</li>
-                            <li class="links__ul--item">Privacy Policy</li>
-                            <li class="links__ul--item">Term and Conditions</li>
+                            <a href="#">
+                                <li class="links__ul--item hvr-grow">FAQ</li>
+                            </a>
+                            <a href="#">
+                                <li class="links__ul--item hvr-grow">Privacy Policy</li>
+                            </a>
+                            <a href="#">
+                                <li class="links__ul--item hvr-grow">Term and Conditions</li>
+                            </a>
                         </ul>
                     </div>
                     <div class="footer-links__item links__item">
@@ -359,9 +378,15 @@
                             Contact
                         </h3>
                         <ul class="links__ul">
-                            <li class="links__ul--item">hi@stayhealthy.com</li>
-                            <li class="links__ul--item">021-123-636</li>
-                            <li class="links__ul--item">stayhealthy.com</li>
+                            <a href="#">
+                                <li class="links__ul--item hvr-grow">hi@stayhealthy.com</li>
+                            </a>
+                            <a href="#">
+                                <li class="links__ul--item hvr-grow">021-123-636</li>
+                            </a>
+                            <a href="#">
+                                <li class="links__ul--item hvr-grow">stayhealthy.com</li>
+                            </a>
                         </ul>
                     </div>
                 </div>
