--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                 <div class="form-left-side">
                     <h2 class="section__title form__title">Become A Member Of This Workout Class</h2>
                     <div class="form__input-wrapper">
-                        <input type="text" class="form__input" placeholder="Email Address">
+                        <input required type="text" class="form__input" placeholder="Email Address">
                         <button class="button form__button">Join Now</button>
                     </div>
                 </div>
@@ -396,6 +396,23 @@
             </div>
         </div>
     </footer>
+    <div class="modal">
+        <div class="modal__overlay">
+
+        </div>
+        <div class="modal__dialog">
+            <a href="#" class="modal__close">
+                <img src="img/close.svg" alt="">
+            </a>
+            <div class="form-left-side">
+                <h2 class="section__title modal__title">Become A Member Of This Workout Class</h2>
+                <div class="form__input-wrapper">
+                    <input required type="text" class="form__input" placeholder="Email Address">
+                    <button class="button form__button">Join Now</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
