--- a/index.html
+++ b/index.html
@@ -404,11 +404,11 @@
             <a href="#" class="modal__close">
                 <img src="img/close.svg" alt="">
             </a>
-            <div class="form-left-side">
+            <div class="form-left-side modal__form">
                 <h2 class="section__title modal__title">Become A Member Of This Workout Class</h2>
-                <div class="form__input-wrapper">
-                    <input required type="text" class="form__input" placeholder="Email Address">
-                    <button class="button form__button">Join Now</button>
+                <div class="form__input-wrapper modal__input-wrapper">
+                    <input required type="text" class="form__input modal__input" placeholder="Email Address">
+                    <button class="button form__button modal__button">Join Now</button>
                 </div>
             </div>
         </div>
