--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <p class="nutritions__description">
                     Don’t worry we have the best nutritionist for your workout, firstly consult with our experts, we can make your meal preparation based on <b>Total Daily Energy Expenditure.</b>
                 </p>
-                <button class="button nutritions__button">Join Now</button>
+                <button class="button nutritions__button hvr-bounce-in">Join Now</button>
            </div>
            </div>
         </div>
@@ -153,7 +153,7 @@
                     </ul>
                     <div class="pricing__price-wrapper">
                         <span class="pricing__price">Rp500.000<span class="pricing__sub">/month</span></span>
-                        <button class="button pricing__button">Workout Now</button>
+                        <button class="button pricing__button hvr-bounce-in">Workout Now</button>
                     </div>
                 </div>
                 <div class="pricing__item">
@@ -190,7 +190,7 @@
                     </ul>
                     <div class="pricing__price-wrapper">
                         <span class="pricing__price">Rp1000.000<span class="pricing__sub">/month</span></span>
-                        <button class="button pricing__button">Workout Now</button>
+                        <button class="button pricing__button hvr-bounce-in">Workout Now</button>
                     </div>
                 </div>
                 <div class="pricing__item">
@@ -231,7 +231,7 @@
                     </ul>
                     <div class="pricing__price-wrapper">
                         <span class="pricing__price">Rp2000.000<span class="pricing__sub">/month</span></span>
-                        <button class="button pricing__button">Workout Now</button>
+                        <button class="button pricing__button hvr-bounce-in">Workout Now</button>
                     </div>
                 </div>
             </div>
@@ -304,7 +304,7 @@
                     <h2 class="section__title form__title">Become A Member Of This Workout Class</h2>
                     <div class="form__input-wrapper">
                         <input required type="text" class="form__input" placeholder="Email Address">
-                        <button class="button form__button">Join Now</button>
+                        <button class="button form__button hvr-bounce-in">Join Now</button>
                     </div>
                 </div>
                 <div class="form-right-side">
